@@ -457,6 +457,23 @@ uint32 Client::GetEXPForLevel(int16 check_level)
 	return(uint32(base * mod));
 }
 
+void Client::AddLevelBasedExp(int8 exp_percentage, int8 max_level) {
+
+	if (exp_percentage > 100)
+	{
+		exp_percentage = 100;
+	}
+
+	if (!max_level || GetLevel() < max_level)
+	{
+		max_level = GetLevel();
+	}
+
+	uint32 newexp = GetEXP() + ((GetEXPForLevel(max_level + 1) - GetEXPForLevel(max_level)) * exp_percentage / 100);
+
+	SetEXP(newexp, 0);
+}
+
 void Group::SplitExp(uint32 exp, Mob* other) {
 	if( other->CastToNPC()->MerchantType != 0 ) // Ensure NPC isn't a merchant
 	  return;
